--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
 pandas
-numpy
+numpy==1.26.4
 pypdf
 tqdm
 dataclasses
@@ -8,8 +8,8 @@ python-docx
 torch
 transformers
 sentencepiece
-accelerate
-bitsandbytes
+# accelerate
+# bitsandbytes
 fastapi
 uvicorn
 # LLaMa index安装
@@ -22,14 +22,17 @@ llama-index-llms-openai
 docx2txt
 faiss-cpu==1.7.4
 langchain==0.0.312
-openai==0.27.4
-llama-cpp-python
+# openai==0.27.4
+openai
+# llama-cpp-python
 loguru
 sentence_transformers
 sse_starlette
-fitz
+#fitz
 frontend
 tools
 docx
 # openapi-schema-pydantic==1.2.4
 # pdfplumber
+PyMuPDFb==1.24.10
+vllm
